add_executable(obj2vr main.cpp)
add_subdirectory(assimp)
set (EXTRA_LIBS ${EXTRA_LIBS})
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I. -std=c++11 -g")
include_directories(${EXTRA_HEADERS} "${PROJECT_BINARY_DIR}" "${Assimp_SOURCE_DIR}/include" ".")
target_link_libraries(obj2vr pthread dl rt assimp ${EXTRA_LIBS})
